<resources>
    <string name="app_name">BakingApp</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="ingredient_quantity">5</string>
    <string name="ingredient_measure">cup</string>
    <string name="ingredient_name">Nutella</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="previous_step">Previous</string>
    <string name="next_step">Next</string>
    <string name="empty_view">Empty view</string>
    <string name="step_instructions">Step instructions</string>
    <string name="ingr_frag_cont">Vanilla extract</string>
    <string name="steps_frag_cont">Prebake cookie crust</string>
    <string name="steps_short_name">Mix all the ingredients</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="servings_number">Servings:</string>
    <string name="recipe_serves_how_many">Servings: %1$s</string>

</resources>
