<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/ingredient_widget_list">

    <TextView
        android:id="@+id/ingredient_quantity"
        style="@style/FragmentIngListStyle"
        android:layout_marginTop="@dimen/ingr_list_top"
        tools:text="@string/ingredient_quantity" />

    <TextView
        android:id="@+id/ingredient_measure"
        style="@style/FragmentIngListStyle"
        android:layout_marginTop="@dimen/ingr_list_top"
        tools:text="@string/ingredient_measure" />

    <TextView
        android:id="@+id/ingredient_name"
        style="@style/FragmentIngListStyle"
        tools:text="@string/ingredient_name" />

</LinearLayout>