<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ingredient_list"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ingredient_quantity"
        style="@style/FragmentIngStepsListStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ingredient_name"
        tools:text="@string/ingredient_quantity" />

    <TextView
        android:id="@+id/ingredient_measure"
        style="@style/FragmentIngStepsListStyle"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        app:layout_constraintStart_toEndOf="@id/ingredient_quantity"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/ingredient_measure" />

    <TextView
        android:id="@+id/ingredient_name"
        style="@style/FragmentIngStepsListStyle"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_quantity"
        tools:text="@string/ingredient_name" />

</android.support.constraint.ConstraintLayout>