<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="@dimen/exoplayer_width"
        android:layout_height="@dimen/exoplayer_height"
        android:layout_marginTop="@dimen/exoplayer_margin_top"
        android:layout_marginStart="@dimen/exoplayer_margin_start"
        android:layout_marginEnd="@dimen/exoplayer_margin_end"
        />

    <ImageView
        android:id="@+id/thumbnail_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/playerView"
        android:visibility="gone">
    </ImageView>

    <TextView
        android:id="@+id/step_long_description"
        style="@style/FragmentStepsDescriptionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@id/thumbnail_url"
        android:text="@string/step_instructions"
        >
    </TextView>

    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:focusable="false"
        android:layout_below="@id/step_long_description"
        android:text="@string/previous_step"
        />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/step_long_description"
        android:focusable="false"
        android:layout_toEndOf="@id/previous_button"
        android:layout_marginStart="15dp"
        android:text="@string/next_step"
        />

</RelativeLayout>